# Infotecs_internship

./: .gitignore  CMakeLists.txt  README.md
Program_1/: CMakeLists.txt
Program_1/sources/: bufferprocessor.cpp  bufferprocessor.h  inputhandler.cpp  inputhandler.h  main.cpp  safebuffer.h  server.cpp  server.h
Program_2/: CMakeLists.txt
Program_2/sources/: client.cpp  client.h  main.cpp  receivehandler.cpp  receivehandler.h
